--- a/rwds.css
+++ b/rwds.css
@@ -1,4 +1,5 @@
 /*-- navbar --*/
+
 .navbar {
   padding-top: 0;
   padding-bottom: 0;
@@ -99,6 +100,7 @@
 }
 
 /*-- quarto titles --*/
+
 #title-block-header {
   margin-block-end: 1rem;
   position: relative;
@@ -179,6 +181,7 @@
 
 
 /*-- main content --*/
+
 body.nav-fixed {
   padding-top: auto;
   background-color: #f0eeeb;
@@ -255,7 +258,6 @@ div.csl-entry {
 
 .article-btn p {
   font-family: 'Oswald';
-  font-weight: 500;
   font-size: 1.3em;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -264,6 +266,7 @@ div.csl-entry {
 
 .article-btn a {
   color: white;
+  font-weight: 500;
 }
 
 .further-info {
@@ -276,6 +279,7 @@ div.csl-entry {
 }
 
 /*-- sidebar --*/
+
 .sidebar nav[role=doc-toc]>h2, .sidebar nav[role=doc-toc]>.h2 {
   font-family: 'Oswald';
   font-size: .875rem;
@@ -334,6 +338,7 @@ div.csl-entry {
 }
 
 /*-- font styles --*/
+
 h3,
 .h3,
 h4,
@@ -422,6 +427,7 @@ tr {
 
 
 /*-- listing styles --*/
+
 div.quarto-post {
   border-bottom: 1px solid black;
 }
@@ -473,6 +479,7 @@ div.quarto-post a {
 
 
 /*-- grid listing --*/
+
 .quarto-grid-item {
   border: none;
   background-color: #f0eeeb;
@@ -523,9 +530,39 @@ div.quarto-post a {
   height: 188px !important;
 }
 
-/*-- homepage styles --*/
-.alt-background {
+
+/*-- background styles --*/
+
+.black-background {
   background-color: black;
+}
+
+.purple-background {
+  background-color: #939bc9;
+}
+
+.blue-background {
+  background-color: #7eadba;
+}
+
+.yellow-background {
+  background-color: #e3b638;
+}
+
+.pink-background {
+  background-color: #d6748c;
+}
+
+.orange-background {
+  background-color: #da9359;
+}
+
+
+/*-- homepage styles --*/
+
+.content-container {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 .header-banner {
@@ -540,113 +577,74 @@ div.quarto-post a {
   height: auto;
 }
 
-.header-text {
+.header-text p {
   text-align: center;
+  margin-bottom: 0;
 }
 
 .header-block {
-  padding-top: 66px;
-  padding-bottom: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
-  max-width: 825px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1.8em; 
+  box-sizing: border-box;
   border-bottom: 1px solid black;
 }
 
-.header-block h2 {
-  margin-top: 70px;
-  border-bottom: 0px;
-}
-
-@media(min-width: 900px) {
-.header-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-@media (min-width: 1080px) {
-.header-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-
-
-
-.article-block {
-  padding-top: 66px;
-  padding-bottom: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
-  max-width: 825px;
+.listing-block {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-bottom: 1.8em; 
+  box-sizing: border-box;
   border-bottom: 1px solid black;
 }
 
-@media(min-width: 900px) {
-.article-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-@media (min-width: 1080px) {
-.article-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-.article-block h2 {
-  margin-top: 70px;
-  margin-left: 0px;
-  border-bottom: 0px;
+.listing-block h2 {
+  margin-top: 1.5em;
   color: black;
+  text-transform: uppercase;
 }
 
-
-
+.pullout-container {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-top: 2.5em;
+}
 
 .pullout-block {
   text-align: center;
-  margin-top: 70px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
-  max-width: 1024px;
+  max-width: calc(1000px + 6vw);
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1.8em; 
+  box-sizing: border-box;
 }
 
-.pullout-block h2,
-.pullout-block p {
+.pullout-text h2 {
   text-align: center;
+  margin-left: 3vw;
+  margin-right: 3vw;
   color: white;
+  margin-top: 0.5em;
 }
 
-@media(min-width: 900px) {
-.pullout-block {
-  margin-left: auto;
-  margin-right: auto;
+.pullout-text p {
+  text-align: center;
+  font-family: 'Oswald';
+  font-weight: 500;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-color: #939bc9;
+  text-decoration-thickness: 3px;
+  margin-bottom: 1.5rem;
 }
-}
-
-@media (min-width: 1080px) {
-.pullout-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-
-
 
 .button {
   border: none;
   border-radius: 0px;
   color: black;
+  background-color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -658,130 +656,16 @@ div.quarto-post a {
 
 .button p {
   color: black;
+  font-family: 'Oswald';
+  font-size: 1.3em;
+  text-transform: uppercase;
   margin-bottom: 0px;
+  text-decoration: none;
 }
 
-.button:hover {
+.button a {
   color: black;
-}
-
-.button1 {
-  background-color: white;
-}
-
-
-
-
-.top-grid-text h6,
-.top-grid-text h2,
-.top-grid-text p {
-  text-align: left;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-  color: white;
-}
-
-.top-grid-block {
-  padding-top: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
-  max-width: 825px;
-}
-
-@media(min-width: 900px) {
-.top-grid-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-@media (min-width: 1080px) {
-.top-grid-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-.bottom-grid-text h6,
-.bottom-grid-text h2,
-.bottom-grid-text p {
-  text-align: left;
-  margin-top: 10px;
-  margin-right: 30px;
-  color: #6c757d;
-  border-bottom: none;
-}
-
-.bottom-grid-block {
-  padding-top: 30px;
-  padding-bottom: 70px;
-  margin-left: 30px;
-  margin-right: 30px;
-  max-width: 825px;
-  border-bottom: 1px solid black;
-}
-
-@media(min-width: 900px) {
-.bottom-grid-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-@media (min-width: 1080px) {
-.bottom-grid-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-
-
-.bannerad-text {
-  text-align: center;
-}
-
-.bannerad-block {
-  margin-top: 70px;
-  padding-top: 70px;
-  padding-bottom: 70px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 70px;
-  max-width: 825px;
-}
-
-.bannerad-block p {
-  text-align: center;
-  color: white;
-  margin-bottom: 0px;
-}
-
-@media(min-width: 900px) {
-.bannerad-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-@media (min-width: 1080px) {
-.bannerad-block {
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-
-
-/*-- DataScienceBites --*/
-.dsb {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 200px;
+  font-weight: 500;
 }
 
 
@@ -846,10 +730,13 @@ div.quarto-post a {
 
 
 /*-- nav footer styles --*/
+
 .nav-footer {
   color: white;
   font-family: 'Oswald';
   font-weight: 400;
+  padding-left: 1.5em !important;
+  padding-right: 1.5em !important;
 }
 
 body:not(.floating) .nav-footer {
@@ -879,10 +766,18 @@ body:not(.floating) .nav-footer {
 
 .nav-footer-left {
   font-family: 'Montserrat';
-  margin-left: 3vw;
 }
 
 .nav-footer-right {
   font-family: 'Montserrat';
-  margin-right: 3vw;
+}
+
+
+/*-- DataScienceBites --*/
+
+.dsb {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
 }
