homepage styling and viewpoints nav complete

--- a/rwds.css
+++ b/rwds.css
@@ -365,6 +365,12 @@ h2, .h2 {
   letter-spacing: normal;
 }
 
+@media (max-width: 991.98px) {
+#quarto-content section:first-of-type h2:first-of-type, #quarto-content section:first-of-type .h2:first-of-type {
+    margin-top: 1.5rem;
+}
+}
+
 h3, 
 .h3,
 h5,
@@ -600,7 +606,7 @@ div.quarto-post a {
 }
 
 .listing-block h2 {
-  margin-top: 1.5em;
+  /* margin-top: 1.5em; */
   color: black;
   text-transform: uppercase;
 }
@@ -622,8 +628,8 @@ div.quarto-post a {
 
 .pullout-text h2 {
   text-align: center;
-  margin-left: 3vw;
-  margin-right: 3vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
   color: white;
   margin-top: 0.5em;
 }
@@ -671,9 +677,11 @@ div.quarto-post a {
 
 /*-- footer style --*/
 
-.footer-background {
-  background-color: black;
-  width: 100%;
+.footer-container {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-top: 1em;
+  margin-top: 2.5em;
 }
 
 .footer-text h3, .h3 {
@@ -707,25 +715,12 @@ div.quarto-post a {
   font-weight: 400;
 }
 
-.content-block {
-  padding-top: 66px;
-  padding-bottom: 70px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 825px;
-  color: white;
-}
-
-@media (max-width: 855px) {
-.content-block {
-  padding-top: 66px;
-  padding-bottom: 70px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: auto;
-  max-width: 825px;
-  color: white;
-}
+.footer-block {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1.8em; 
+  box-sizing: border-box;
 }
 
 
