callout background color changed

--- a/rwds.css
+++ b/rwds.css
@@ -537,6 +537,12 @@ div.quarto-post a {
 }
 
 
+/*-- callout styles --*/
+.callout.callout-style-default {
+  background-color: white;
+}
+
+
 /*-- background styles --*/
 
 .black-background {
