Added top story to homepage

--- a/rwds.css
+++ b/rwds.css
@@ -92,7 +92,7 @@
   font-weight: 300;
   color: black;
   text-align: inherit;
-  text-decoration: none;
+  /* text-decoration: none; */
   text-transform: uppercase;
   white-space: nowrap;
   background-color: rgba(0,0,0,0);
@@ -219,9 +219,14 @@ blockquote {
 }
 
 .citation a, .footnote-ref {
-  text-decoration: none;
+  /* text-decoration: none; */
   color: #939bc9;
   font-weight: 700;
+}
+
+.citation a:hover {
+  /* text-decoration: none; */
+  color: black
 }
 
 div.csl-entry {
@@ -248,7 +253,7 @@ div.csl-entry {
   color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   display: inline-block;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
@@ -313,10 +318,14 @@ div.csl-entry {
 }
 
 .toc-actions a {
-  text-decoration: none;
+  /* text-decoration: none; */
   font-family: 'Montserrat';
   font-weight: 500;
   color: black;
+}
+
+.toc-actions a:hover {
+  color: #939bc9;
 }
 
 #quarto-margin-sidebar .toc-actions .bi:before {
@@ -332,9 +341,13 @@ div.csl-entry {
 }
 
 .column-margin, .figure-caption a {
-  text-decoration: none;
+  /* text-decoration: none; */
   color: #939bc9;
   font-weight: 700;
+}
+
+.figure-caption a:hover {
+  color: black;
 }
 
 /*-- font styles --*/
@@ -388,32 +401,36 @@ body {
   letter-spacing: normal;
 }
 
+a {
+  text-decoration: none;
+}
+
 p > a {
   color: #939bc9;
   font-weight: 700;
-  text-decoration: none; 
+  /* text-decoration: none;  */
 }
 
 b, strong a {
-  text-decoration: none;
+  /* text-decoration: none; */
   color: #939bc9;
 }
 
 ul a {
   color: #939bc9;
   font-weight: 700;
-  text-decoration: none; 
+  /* text-decoration: none;  */
 }
 
 dd a {
   color: #939bc9;
   font-weight: 700;
-  text-decoration: none; 
+  /* text-decoration: none;  */
 }
 
-a.listing-title {
+/* a.listing-title {
   text-decoration: none;
-}
+} */
 
 .table {
   color: black;
@@ -577,6 +594,26 @@ div.quarto-post a {
   padding-right: 1.5em;
 }
 
+.top-story {
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 1em; 
+  box-sizing: border-box;
+}
+
+.top-story-text {
+  margin: 1rem;
+  margin-top: 0;
+}
+
+.top-story-text h2 > a {
+  margin-top: 1.5rem;
+}
+
+.top-story-text p {
+  margin-bottom: 0;
+}
+
 .header-banner {
   position: relative;
   display: flex;
@@ -659,7 +696,7 @@ div.quarto-post a {
   background-color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
@@ -746,12 +783,12 @@ body:not(.floating) .nav-footer {
 
 .nav-footer a {
   color: white;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .nav-footer a:hover {
   color: #939bc9;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 .nav-footer-left .footer-items .nav-link, .nav-footer-center .footer-items .nav-link, .nav-footer-right .footer-items .nav-link {
