homepage and latest content done

--- a/rwds.css
+++ b/rwds.css
@@ -664,6 +664,11 @@ div.quarto-post a {
   text-transform: uppercase;
 }
 
+.listing-block h2:hover {
+  color: #939bc9;
+}
+
+
 .pullout-container {
   padding-left: 1.5em;
   padding-right: 1.5em;
