upload TH career profile

--- a/rwds.css
+++ b/rwds.css
@@ -354,6 +354,35 @@ div.csl-entry {
   border-top: none;
 }
 
+.pullquote-container {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.pullquote-grid {
+  padding-bottom: 1.8em;
+}
+
+.pullquote p {
+  font-family: 'Oswald';
+  font-weight: 500;
+  font-size: calc(1.345rem + 0.85vw);
+  color: black;
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.2;
+}
+
+@media (min-width: 1200px) {
+.pullquote p {
+    font-size: 2rem;
+}
+}
+
+.pullquote img {
+  margin: 0;
+}
+
 /*-- font styles --*/
 
 h3,
@@ -370,6 +399,7 @@ h6,
 h1, .h1 {
   font-family: 'Oswald';
   font-weight: 500;
+  color: black;
   text-transform: uppercase;
   letter-spacing: normal;
 }
@@ -377,6 +407,7 @@ h1, .h1 {
 h2, .h2 {
   font-family: 'Oswald';
   font-weight: 500;
+  color: black;
   text-transform: none;
   border-bottom: none;
   letter-spacing: normal;
