minor corrections, old fig 6 removed

--- a/rwds.css
+++ b/rwds.css
@@ -383,6 +383,16 @@ div.csl-entry {
   margin: 0;
 }
 
+.table-caption, caption {
+  color: black;
+  font-size: 0.825rem;
+}
+
+.table-caption, caption b {
+  color: black;
+}
+
+
 /*-- font styles --*/
 
 h3,
