--- a/rwds.css
+++ b/rwds.css
@@ -639,6 +639,10 @@ div.quarto-post a {
   padding-right: 1.5em;
 }
 
+.content-container .listing-pagination {
+  display: none;
+}
+
 .top-story {
   max-width: 1000px;
   margin: 0 auto;
