initial article upload

--- a/rwds.css
+++ b/rwds.css
@@ -235,11 +235,11 @@ div.csl-entry {
 }
 
 #quarto-appendix.default {
+  border-top: none;
   background-color: #f0eeeb;
-  padding-top: 1.5em;
-  margin-top: 2em;
-  z-index: 998;
-  border-top: 1px solid black
+  padding-top: 0;
+  margin-top: 2.5em;
+  /* z-index: 998; */
 }
 
 ::marker {
@@ -350,9 +350,9 @@ div.csl-entry {
   color: black;
 }
 
-#quarto-appendix.default {
+/* #quarto-appendix.default {
   border-top: none;
-}
+} */
 
 .pullquote-container {
   padding-top: 1em;
