keyline style added

--- a/rwds.css
+++ b/rwds.css
@@ -283,6 +283,12 @@ div.csl-entry {
   border-bottom: 1px solid black;
 }
 
+.keyline hr {
+  opacity: 1;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 /*-- sidebar --*/
 
 .sidebar nav[role=doc-toc]>h2, .sidebar nav[role=doc-toc]>.h2 {
