in-article nav styling applied

--- a/rwds.css
+++ b/rwds.css
@@ -251,9 +251,8 @@ div.csl-entry {
   border-radius: 0px;
   background-color: black;
   color: white;
-  padding: 15px 32px;
+  padding: 0.85em 1em;
   text-align: center;
-  /* text-decoration: none; */
   display: inline-block;
   margin-top: 1.5em;
   margin-bottom: 1.5em;
@@ -288,6 +287,37 @@ div.csl-entry {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+
+.nav-btn-container {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.nav-btn {
+  border: none;
+  border-radius: 0px;
+  background-color: black;
+  color: white;
+  padding: 0.85em 1em;
+  text-align: center;
+  display: inline-block;
+  cursor: pointer;
+  width: 100%;
+}
+
+.nav-btn p {
+  font-family: 'Oswald';
+  font-size: 1.3em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+}
+
+.nav-btn a {
+  color: white;
+  font-weight: 500;
+}
+
 
 /*-- sidebar --*/
 
