homepage button style changes

--- a/rwds.css
+++ b/rwds.css
@@ -796,12 +796,14 @@ div.quarto-post a {
   border-radius: 0px;
   color: black;
   background-color: white;
-  padding: 15px 32px;
+  padding: 0.85em 1em;
   text-align: center;
-  /* text-decoration: none; */
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin-top: 0.6em; 
+  margin-bottom: 0.25em; 
+  margin-left: 1.5em; 
+  margin-right: 1.5em;
   cursor: pointer;
 }
 
