article upload, article button links resolved

--- a/rwds.css
+++ b/rwds.css
@@ -271,6 +271,13 @@ div.csl-entry {
 .article-btn a {
   color: white;
   font-weight: 500;
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+.article-btn a:hover {
+  color: #939bc9;
 }
 
 .further-info {
@@ -316,6 +323,13 @@ div.csl-entry {
 .nav-btn a {
   color: white;
   font-weight: 500;
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+.nav-btn a:hover {
+  color: #939bc9;
 }
 
 
@@ -799,7 +813,6 @@ div.quarto-post a {
   padding: 0.85em 1em;
   text-align: center;
   display: inline-block;
-  font-size: 16px;
   margin-top: 0.6em; 
   margin-bottom: 0.25em; 
   margin-left: 1.5em; 
@@ -819,6 +832,10 @@ div.quarto-post a {
 .button a {
   color: black;
   font-weight: 500;
+}
+
+.button a:hover {
+  color: #939bc9;
 }
 
 
