colour fix on h3 TOC listings

--- a/rwds.css
+++ b/rwds.css
@@ -367,6 +367,11 @@ div.csl-entry {
   color: black;
 }
 
+.sidebar nav[role=doc-toc] ul>li>a.active, .sidebar nav[role=doc-toc] ul>li>ul>li>a.active {
+  border-left: 1px solid #939bc9;
+  color: #939bc9 !important;
+}
+
 .toc-actions a {
   /* text-decoration: none; */
   font-family: 'Montserrat';
