--- a/rwds.css
+++ b/rwds.css
@@ -242,6 +242,11 @@ div.csl-entry {
   /* z-index: 998; */
 }
 
+#quarto-appendix.default .quarto-appendix-heading {
+  font-weight: 500;
+  opacity: inherit;
+}
+
 ::marker {
   font-variant-numeric: normal;
 }
@@ -454,11 +459,15 @@ h3,
 .h3,
 h4,
 .h4,
+h5,
+.h5
 h6,
 .h6 {
   font-family: 'Oswald';
   text-transform: none;
   letter-spacing: normal;
+  font-weight: 500;
+  opacity: 1;
   color: black
 }
 
@@ -468,6 +477,7 @@ h1, .h1 {
   color: black;
   text-transform: uppercase;
   letter-spacing: normal;
+  opacity: 1;
 }
 
 h2, .h2 {
@@ -477,6 +487,7 @@ h2, .h2 {
   text-transform: none;
   border-bottom: none;
   letter-spacing: normal;
+  opacity: 1;
 }
 
 @media (max-width: 991.98px) {
@@ -485,7 +496,7 @@ h2, .h2 {
 }
 }
 
-h3, 
+/* h3, 
 .h3,
 h5,
 .h5 {
@@ -493,7 +504,7 @@ h5,
   font-weight: 500;
   text-transform: none;
   letter-spacing: normal;
-}
+} */
 
 body {
   font-family: 'Montserrat';
