--- a/rwds.css
+++ b/rwds.css
@@ -243,6 +243,10 @@ div.csl-entry {
   opacity: inherit;
 }
 
+#quarto-appendix.default *[role=doc-endnotes]>ol, #quarto-appendix.default .quarto-appendix-contents>*:not(h2):not(.h2) {
+  opacity: inherit;
+}
+
 ::marker {
   font-variant-numeric: normal;
 }
