--- a/rwds.css
+++ b/rwds.css
@@ -835,6 +835,11 @@ div.quarto-post a {
   color: #939bc9;
 }
 
+.btn-webr {
+  background-color: #939bc9;
+  color: white;
+}
+
 
 /*-- footer style --*/
 
