webr style added

--- a/rwds.css
+++ b/rwds.css
@@ -946,3 +946,9 @@ body:not(.floating) .nav-footer {
 :root {
   --mermaid-edge-color: black;
 }
+
+
+/* webR */
+pre code {
+  background-color: #f8f8f8;
+}
