code blocks updated for go live

--- a/rwds.css
+++ b/rwds.css
@@ -946,3 +946,7 @@ body:not(.floating) .nav-footer {
 pre code {
   background-color: #f8f8f8;
 }
+
+pre.sourceCode {
+  background-color: #f8f8f8;
+}
