homepage styling updates

--- a/rwds.css
+++ b/rwds.css
@@ -7,23 +7,25 @@
   font-size: 1em;
 }
 
+/* .navbar>.container-fluid {
+  padding-left: calc(var(--bs-gutter-x)*.4);
+} */
+
 #quarto-header {
   border-bottom: 1px solid black;
 }
-
 
 .navbar-brand.navbar-brand-logo {
   display: flex;
   padding-top: 0;
   padding-bottom: 0;
   margin-right: 0;
-  margin-left: 1.5em;
+  margin-left: calc(var(--bs-gutter-x)*.99);
 }
 
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .navbar-brand.navbar-brand-logo {
-    margin-left: 5vw;
-    margin-right: 10vw;
+    margin-left: 0;
 }
 }
 
@@ -41,17 +43,17 @@
 }
 }
 
-.navbar-dark .navbar-nav .nav-link {
+.navbar-nav .nav-link {
   color: black;
   font-weight: 400;
 }
 
-.navbar-dark .navbar-nav .nav-link:hover {
+.navbar-nav .nav-link:hover {
   color: #939bc9;
   font-weight: 400;
 }
 
-.navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
+.navbar-nav .show>.nav-link, .navbar-nav .active>.nav-link, .navbar-nav .nav-link.active {
   color: #939bc9;
 }
 
@@ -462,7 +464,7 @@ h6,
   letter-spacing: normal;
   font-weight: 500;
   opacity: 1;
-  color: black
+  color: black;
 }
 
 h1, .h1 {
@@ -613,6 +615,11 @@ div.quarto-post a {
 .quarto-grid-item .card-title {
   margin-top: 0.5em;
   margin-bottom: 0.75em;
+  color: black;
+}
+
+.card-body {
+  color: black;
 }
 
 .quarto-grid-item .listing-categories {
@@ -741,6 +748,10 @@ div.quarto-post a {
   padding-bottom: 1.8em; 
   box-sizing: border-box;
   border-bottom: 1px solid black;
+}
+
+.header-block a:hover{
+  color: black;
 }
 
 .listing-block {
