main section page styling updated

--- a/rwds.css
+++ b/rwds.css
@@ -7,10 +7,6 @@
   font-size: 1em;
 }
 
-/* .navbar>.container-fluid {
-  padding-left: calc(var(--bs-gutter-x)*.4);
-} */
-
 #quarto-header {
   border-bottom: 1px solid black;
 }
@@ -113,6 +109,11 @@
 
 .quarto-title-banner {
   margin-bottom: 0.75em;
+  color: black;
+}
+
+.quarto-title-banner a {
+  color: #939bc9;
 }
 
 @media (max-width: 991.98px) {
@@ -131,6 +132,7 @@
 
 .quarto-title-banner .quarto-title .title {
   font-weight: 500;
+  color: black;
 }
 
 #title-block-header.quarto-title-block.default .description {
@@ -503,6 +505,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: black;
+}
+
 p > a {
   color: #939bc9;
   font-weight: 700;
@@ -591,8 +597,16 @@ div.quarto-post a {
   color: black;
 }
 
+.nav-page .nav-page-text:hover {
+  color: #939bc9;
+}
+
 .nav-page .bi {
   color: black;
+}
+
+.nav-page .bi:hover {
+  color: #939bc9;
 }
 
 
@@ -750,10 +764,6 @@ div.quarto-post a {
   border-bottom: 1px solid black;
 }
 
-.header-block a:hover{
-  color: black;
-}
-
 .listing-block {
   max-width: 1000px;
   margin: 0 auto;
@@ -770,7 +780,6 @@ div.quarto-post a {
 .listing-block h2:hover {
   color: #939bc9;
 }
-
 
 .pullout-container {
   padding-left: 1.5em;
@@ -887,7 +896,7 @@ div.quarto-post a {
   max-width: 1000px;
   margin: 0 auto;
   padding-top: 1em;
-  padding-bottom: 1.8em; 
+  padding-bottom: 1em; 
   box-sizing: border-box;
 }
 
@@ -900,6 +909,7 @@ div.quarto-post a {
   font-weight: 400;
   padding-left: 1.5em !important;
   padding-right: 1.5em !important;
+  padding-top: 1em;
 }
 
 body:not(.floating) .nav-footer {
@@ -908,6 +918,7 @@ body:not(.floating) .nav-footer {
 
 .nav-footer a {
   color: white;
+  font-weight: 400;
 }
 
 .nav-footer a:hover {
