sub-listing styling fixed

--- a/rwds.css
+++ b/rwds.css
@@ -590,6 +590,10 @@ div.quarto-post a {
   color: #939bc9;
 }
 
+div.quarto-post .listing-description {
+  margin-bottom: 1.5em;
+}
+
 .nav-page .nav-page-text {
   font-family: 'Oswald';
   font-weight: 500;
