figcaption styling updated

--- a/rwds.css
+++ b/rwds.css
@@ -403,12 +403,12 @@ div.csl-entry {
   text-decoration: none;
 }
 
-.column-margin, .figure-caption a {
+.column-margin figcaption a {
   color: #939bc9;
   font-weight: 700;
 }
 
-.figure-caption a:hover {
+.column-margin figcaption a:hover {
   color: black;
 }
 
