--- a/rwds.css
+++ b/rwds.css
@@ -7,6 +7,12 @@
   font-size: 1em;
 }
 
+@media (max-width: 991px) {
+.navbar-nav-scroll {
+  background: black;
+}
+}
+
 #quarto-header {
   border-bottom: 1px solid black;
 }
@@ -16,7 +22,8 @@
   padding-top: 0;
   padding-bottom: 0;
   margin-right: 0;
-  margin-left: calc(var(--bs-gutter-x)*.99);
+  margin-left: 1em;
+  /* margin-left: calc(var(--bs-gutter-x)*.99); */
 }
 
 @media (max-width: 767px) {
@@ -47,6 +54,13 @@
 .navbar-nav .nav-link:hover {
   color: #939bc9;
   font-weight: 400;
+}
+
+@media (max-width: 991px) {
+.navbar-nav .nav-link {
+  color: white;
+  font-weight: 400;
+}
 }
 
 .navbar-nav .show>.nav-link, .navbar-nav .active>.nav-link, .navbar-nav .nav-link.active {
