nav buttons and webr code background changed

--- a/rwds.css
+++ b/rwds.css
@@ -607,22 +607,14 @@ div.quarto-post .listing-description {
   margin-bottom: 1.5em;
 }
 
-.nav-page .nav-page-text {
+.nav-page a {
   font-family: 'Oswald';
   font-weight: 500;
   text-transform: uppercase;
   color: black;
 }
 
-.nav-page .nav-page-text:hover {
-  color: #939bc9;
-}
-
-.nav-page .bi {
-  color: black;
-}
-
-.nav-page .bi:hover {
+.nav-page a:hover {
   color: #939bc9;
 }
 
@@ -978,10 +970,6 @@ body:not(.floating) .nav-footer {
   color: white;
 }
 
-pre code {
-  background-color: #f8f8f8;
-}
-
-pre.sourceCode {
-  background-color: #f8f8f8;
+pre code:not(.sourceCode) {
+  background-color: #F8F8F8;
 }
