added local fonts

--- a/rwds.scss
+++ b/rwds.scss
@@ -1,9 +1,23 @@
 /*-- scss:defaults --*/
-@import 'https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Oswald:wght@300;400;500&display=swap';
+$web-font-path: "";
 
-#quarto-content {
-  background-color: #f0eeeb;
-  font-family: 'Montserrat', sans-serif !important;
-  font-family: 'Oswald', sans-serif;
-  color: black;
+/*-- scss:rules --*/
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+  font-weight: 1 999;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: italic;
+  src: url('fonts/Montserrat-Italic-VariableFont_wght.ttf') format('truetype');
+  font-weight: 1 999;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('fonts/Oswald-VariableFont_wght.ttf') format('truetype');
+  font-weight: 1 999;
 }
