Alias redirect fixes, social styles, footer copyright year updated

--- a/_extensions/schochastics/social-share/social-share.css
+++ b/_extensions/schochastics/social-share/social-share.css
@@ -32,12 +32,12 @@
 }
 
 .social-share a.twitter {
-    border-color: #1DA1F2;
-    color: #1DA1F2;
+    border-color: #000;
+    color: #000;
 }
 
 .social-share a.twitter:hover {
-    background: #1DA1F2;
+    background: #000;
     color: white;
 }
 
@@ -107,6 +107,6 @@
 }
 
 .social-share a.bsky:hover {
-    border-color: #0A7AFF;
+    background: #0A7AFF;
     color: white;
 }
